# cmd/api/server/api.go
@@ -1,14 +1,12 @@
 package server
 
 import (
-	"fmt"
 	"log/slog"
 	"net/http"
 
 	_ "github.com/CarlosHenriqueDamasceno/wishtrack/etc/doc"
 	"github.com/CarlosHenriqueDamasceno/wishtrack/internal/content"
 	"github.com/CarlosHenriqueDamasceno/wishtrack/internal/user"
-	httpSwagger "github.com/swaggo/http-swagger/v2"
 )
 
 type Api struct {
@@ -41,13 +39,4 @@ func NewApi(
 
 func (a *Api) ServeHTTP(w http.ResponseWriter, req *http.Request) {
 	a.router.ServeHTTP(w, req)
-}
-
-func (a *Api) setupRoutes() {
-	docsUrl := fmt.Sprintf("%s/swagger/doc.json", a.config.Address)
-	a.router.Handle("GET /swagger/*", httpSwagger.Handler(httpSwagger.URL(docsUrl)))
-
-	a.router.HandleFunc("POST /api/v1/register", a.handleRegister)
-	a.router.HandleFunc("POST /api/v1/login", a.handleLogin)
-	a.router.HandleFunc("POST /api/v1/write-down", a.AuthTokenMiddleware(a.handleWriteDown))
 }
